// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests Space Travel\`s Hub App test renders the ActiveMember component 1`] = `
<div>
  <button
    className="activeMemberCTA"
    type="button"
  >
    Active Member
  </button>
</div>
`;

exports[`tests Space Travel\`s Hub App test renders the RocketReserved component 1`] = `
<div>
  <button
    className="reserveButton"
    type="button"
  >
    Reserved
  </button>
</div>
`;
